[add] Finish style and install assets

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,2 +1,9 @@
-$color_link: #000;
-$color_title: #FFF;
+$background: #FFFFFF;
+$color_link: #C0C2C4;
+$color_title: #929292;
+$color_title2: #E54F60;
+$color_big_title: #E74F5C;
+
+$color_title_section: #E66672;
+$color_section: #898989;
+$color_button: #E4505E;
