--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Lato);
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400);
 body {
-  background: #EEE;
+  background: #FFFFFF;
   font-family: 'Lato', sans-serif;
-  font-size: 16px; }
+  font-size: 16px;
+  font-weight: 400; }
 
 header {
   padding: 15px 75px;
@@ -11,14 +12,27 @@ header {
     display: inline-block;
     vertical-align: middle; }
   header h1 {
-    float: left;
+    color: #929292;
     margin: 0; }
+  header strong {
+    color: #E54F60; }
   header nav ul {
-    list-style: none; }
-    header nav ul a {
-      text-decoration: none; }
+    list-style: none;
+    margin: 0; }
   header nav ul li {
-    display: inline-block; }
+    display: inline-block;
+    margin-left: 10px; }
+  header nav ul li a {
+    color: #C0C2C4;
+    text-decoration: none; }
+
+h2 {
+  color: #E74F5C;
+  font-size: 3em;
+  margin: 0;
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase; }
 
 .wrap {
   clear: both;
@@ -27,10 +41,34 @@ header {
     display: inline-block;
     width: 50%; }
 
+.section {
+  color: #898989;
+  margin-top: 20px; }
+  .section h3 {
+    color: #E66672;
+    font-size: 2em;
+    margin: 0; }
+  .section p {
+    font-size: 1.2em;
+    line-height: 1.5em; }
+
+.left {
+  float: left; }
+
 .right {
   float: right; }
 
-h2 {
-  text-align: center; }
+button {
+  background: #E4505E;
+  border: 0;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 1.5em;
+  font-weight: 300;
+  padding: 10px 30px; }
+
+figure {
+  margin: 0; }
 
 /*# sourceMappingURL=style.css.map */
