--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,9 +2,10 @@
 @import 'fonts';
 
 body {
-	background: #EEE;
+	background: $background;
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
+	font-weight: 400;
 }
 
 header {
@@ -18,21 +19,38 @@ header {
 	}
 
 	h1{
-		float: left;
+		color: $color_title;
 		margin: 0;
+	}
+
+	strong {
+		color: $color_title2;
 	}
 
 	nav ul{
 		list-style: none;
-
-		a{
-			text-decoration: none;
-		}
+		margin: 0;
 	}
 
 	nav ul li {
 		display: inline-block;
+		margin-left: 10px;
 	}
+
+	nav ul li a {
+		color: $color_link;
+		text-decoration: none;
+	}
+
+}
+
+h2 {
+	color: $color_big_title;
+	font-size: 3em;
+	margin: 0;
+	margin-bottom: 20px;
+	text-align: center;
+	text-transform: uppercase;
 }
 
 .wrap {
@@ -45,10 +63,43 @@ header {
 	}
 }
 
+.section {
+	color: $color_section;
+	margin-top: 20px;
+
+
+	h3 {
+		color: $color_title_section;
+		font-size: 2em;
+		margin: 0;
+	}
+
+	p {
+		font-size: 1.2em;
+		line-height: 1.5em;
+	}
+}
+
+
+.left {
+	float: left;
+}
+
 .right {
 	float: right;
 }
 
-h2 {
-	text-align: center;
+button {
+	background: $color_button;
+	border: 0;
+	border-radius: 5px;
+	color: white;
+	cursor: pointer;
+	font-size: 1.5em;
+	font-weight: 300;
+	padding: 10px 30px;
+}
+
+figure {
+	margin: 0;
 }
